...
            ),

            SizedBox(height: 4.h),

            // Title
            Text(
              'No Active Trials',
              style: theme.textTheme.headlineSmall,
              textAlign: TextAlign.center,
            ),

            SizedBox(height: 1.h),

...
